// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`YourInfoForm renders 1`] = `
<div
  className="layout"
>
  <header>
    
    <h1
      className="au-display-xl"
      styleName="content-heading"
      tabIndex="-1"
    >
      Contact details
    </h1>
  </header>
  <article
    role="main"
  >
    <div
      className="calloutMistake"
    >
      <b>
         Avoid common mistakes 
      </b>
      <ul
        className="mistake-list"
      >
        <li>
          <b>
            Contact names
          </b>
           - use full names.
        </li>
        <li>
          <b>
            Email and phone numbers
          </b>
           - Check the format and details are correct.
        </li>
      </ul>
    </div>
    <form
      id="yourinfo"
      method="post"
      onReset={[Function]}
      onSubmit={[Function]}
    >
      <h2>
        Business contact
      </h2>
      <div
        className="field"
      >
        <label
          className="question-heading"
          htmlFor="contact_name"
        >
          Name
        </label>
        <p
          className="hint"
          id="contact_name-hint"
        >
          The contact listed on your seller profile page and the person who receives new opportunities by email.
        </p>
        <input
          className=""
          disabled={true}
          id="contact_name"
          name="contact_name"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
          type="text"
        />
      </div>
      <div
        className="field"
      >
        <label
          className="question-heading"
          htmlFor="contact_email"
        >
          Email
        </label>
        <input
          className=""
          disabled={true}
          id="contact_email"
          name="contact_email"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
          type="text"
        />
      </div>
      <div
        className="field"
      >
        <label
          className="question-heading"
          htmlFor="contact_phone"
        >
          Phone
        </label>
        <p
          className="hint"
          id="contact_phone-hint"
        >
          Please include the area code for landlines.
        </p>
        <input
          className=""
          disabled={true}
          id="contact_phone"
          name="contact_phone"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
          type="text"
        />
      </div>
      <div
        className="row"
      >
        <div />
        <div
          className="col-xs-12 col-sm-12 col-md-9"
        >
          <button
            className="button-width button-width-left"
            disabled="disabled"
          >
            Save and continue
          </button>
          <button
            className="save-button button-width button-width-right"
            disabled="disabled"
          >
            Save and finish later
          </button>
        </div>
        <div
          className="col-xs-12 col-sm-12 col-md-3"
        />
      </div>
    </form>
  </article>
</div>
`;

exports[`YourInfoForm renders with edit mode 1`] = `
<div
  className="layout"
>
  <header>
    
    <h1
      className="au-display-xl"
      styleName="content-heading"
      tabIndex="-1"
    >
      Contact details
    </h1>
  </header>
  <article
    role="main"
  >
    <div
      className="calloutMistake"
    >
      <b>
         Avoid common mistakes 
      </b>
      <ul
        className="mistake-list"
      >
        <li>
          <b>
            Contact names
          </b>
           - use full names.
        </li>
        <li>
          <b>
            Email and phone numbers
          </b>
           - Check the format and details are correct.
        </li>
      </ul>
    </div>
    <form
      action="/foo/bar"
      id="yourinfo"
      method="post"
      onReset={[Function]}
      onSubmit={[Function]}
    >
      <input
        id="csrf_token"
        name="csrf_token"
        type="hidden"
        value="sometoken"
      />
      <h2>
        Business contact
      </h2>
      <div
        className="field"
      >
        <label
          className="question-heading"
          htmlFor="contact_name"
        >
          Name
        </label>
        <p
          className="hint"
          id="contact_name-hint"
        >
          The contact listed on your seller profile page and the person who receives new opportunities by email.
        </p>
        <input
          className=""
          disabled={true}
          id="contact_name"
          name="contact_name"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
          type="text"
        />
      </div>
      <div
        className="field"
      >
        <label
          className="question-heading"
          htmlFor="contact_email"
        >
          Email
        </label>
        <input
          className=""
          disabled={true}
          id="contact_email"
          name="contact_email"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
          type="text"
        />
      </div>
      <div
        className="field"
      >
        <label
          className="question-heading"
          htmlFor="contact_phone"
        >
          Phone
        </label>
        <p
          className="hint"
          id="contact_phone-hint"
        >
          Please include the area code for landlines.
        </p>
        <input
          className=""
          disabled={true}
          id="contact_phone"
          name="contact_phone"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
          type="text"
        />
      </div>
      <div
        className="row"
      >
        <div />
        <div
          className="col-xs-12 col-sm-12 col-md-9"
        >
          <button
            className="button-width button-width-left"
            disabled="disabled"
          >
            Save and continue
          </button>
          <button
            className="save-button button-width button-width-right"
            disabled="disabled"
          >
            Save and finish later
          </button>
        </div>
        <div
          className="col-xs-12 col-sm-12 col-md-3"
        />
      </div>
    </form>
  </article>
</div>
`;

exports[`YourInfoForm renders with form_options 1`] = `
<div
  className="layout"
>
  <header>
    
    <h1
      className="au-display-xl"
      styleName="content-heading"
      tabIndex="-1"
    >
      Contact details
    </h1>
  </header>
  <article
    role="main"
  >
    <div
      className="calloutMistake"
    >
      <b>
         Avoid common mistakes 
      </b>
      <ul
        className="mistake-list"
      >
        <li>
          <b>
            Contact names
          </b>
           - use full names.
        </li>
        <li>
          <b>
            Email and phone numbers
          </b>
           - Check the format and details are correct.
        </li>
      </ul>
    </div>
    <form
      action="/foo/bar"
      id="yourinfo"
      method="post"
      onReset={[Function]}
      onSubmit={[Function]}
    >
      <input
        id="csrf_token"
        name="csrf_token"
        type="hidden"
        value="sometoken"
      />
      <h2>
        Business contact
      </h2>
      <div
        className="field"
      >
        <label
          className="question-heading"
          htmlFor="contact_name"
        >
          Name
        </label>
        <p
          className="hint"
          id="contact_name-hint"
        >
          The contact listed on your seller profile page and the person who receives new opportunities by email.
        </p>
        <input
          className=""
          disabled={true}
          id="contact_name"
          name="contact_name"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
          type="text"
        />
      </div>
      <div
        className="field"
      >
        <label
          className="question-heading"
          htmlFor="contact_email"
        >
          Email
        </label>
        <input
          className=""
          disabled={true}
          id="contact_email"
          name="contact_email"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
          type="text"
        />
      </div>
      <div
        className="field"
      >
        <label
          className="question-heading"
          htmlFor="contact_phone"
        >
          Phone
        </label>
        <p
          className="hint"
          id="contact_phone-hint"
        >
          Please include the area code for landlines.
        </p>
        <input
          className=""
          disabled={true}
          id="contact_phone"
          name="contact_phone"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
          type="text"
        />
      </div>
      <div
        className="row"
      >
        <div />
        <div
          className="col-xs-12 col-sm-12 col-md-9"
        >
          <button
            className="button-width button-width-left"
            disabled="disabled"
          >
            Save and continue
          </button>
          <button
            className="save-button button-width button-width-right"
            disabled="disabled"
          >
            Save and finish later
          </button>
        </div>
        <div
          className="col-xs-12 col-sm-12 col-md-3"
        />
      </div>
    </form>
  </article>
</div>
`;
